--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 </section>
 
 
-
+<script src="assets/js/config.js" type="module"></script>
 <script src="assets/js/app.js" type="module"></script>
 <script src="assets/js/route.js" type="module"></script>
 </body>
